# substrings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_vs2019.bat  generate_vs2019_skip_tests.bat
include/: substrings-common.hpp  substrings.hpp
src/substrings-client/: CMakeLists.txt  main.cpp
src/substrings-lib/: CMakeLists.txt  substrings.cpp  trie.cpp  trie.hpp
test/substrings-test/: CMakeLists.txt  unit-tests.cpp
